--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 */[Oo]bj/
 */[Tt]emp/
 */[Uu]nityGenerated/
+*/[Ff]irebase/
+*/[Ee]ditor/
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
