--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 */[Uu]nityGenerated/
 */[Ff]irebase/
 */[Ee]ditor/
+*/[Pp]lugins/
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
